# image-mod

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.cargo/: config.toml
src/: applied.rs  color.rs  editor.rs  file_picker.rs  image.rs  image_old.rs  keybinds.rs  main.rs  menu.rs  position.rs  prelude.rs  project.rs  slot.rs  ui.rs  view.rs  viewer.rs
src/modifier/: cation.rs  mod.rs  modification.rs  traits.rs  ui.rs
src/modifier/collection/: blur.rs  brighten.rs  bucket.rs  contrast.rs  fill.rs  grayscale.rs  hue.rs  invert.rs  list.rs  magic_wand.rs  mod.rs  overlay.rs  resize.rs  source.rs
src/modifier/collection/pencil/: mod.rs  plugin.rs  rainbow.rs  simple.rs  sort.rs
src/mods/: mod.rs  modification.rs  modifier.rs  plugin.rs  selection.rs  ui.rs
src/mods/collection/: blur.rs  brighten.rs  color.rs  contrast.rs  grayscale.rs  hue.rs  invert.rs  mod.rs  pencil.rs  resize.rs  source.rs
src/mods/collection/filters/: grayscale.rs  mod.rs
src/mods/collection/pencil/: mod.rs  plugin.rs  rainbow.rs  simple.rs  sort.rs
src/mods/selectors/: plugin.rs  selection.rs
src/mods/selectors/collection/: canvas.rs
src/selectors/: mod.rs  plugin.rs  selection.rs  ui.rs
src/selectors/collection/: canvas.rs  mod.rs
src/tools/: mod.rs  movement.rs  notool.rs  pencil.rs  plugin.rs  toolbox.rs
src/tools/pencils/: mod.rs  plugin.rs  rainbow.rs  simple.rs  sort.rs
src/viewer/: mod.rs  ui.rs
