[package]
name = "image-mod"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <casbrugman@hotmail.nl>"]

[dependencies]
image = "0.24.5"
rfd = "0.10.0"
dotenvy = "0.15.6"
dyn-clone = "1.0.9"
eframe = "0.20.1"
egui = "0.20.1"

[dependencies.uuid]
version = "1.2.2"
features = ["v4"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
