[package]
name = "image-mod"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <casbrugman@hotmail.nl>"]

[dependencies]
image = "0.24.5"
rfd = "0.11.1"
dotenvy = "0.15.6"
dyn-clone = "1.0.10"
eframe = "0.21.2"
egui = "0.21.0"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
