[package]
name = "image-mod"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <casbrugman@hotmail.nl>"]

[dependencies]
image = "0.24.5"
rfd = "0.12.1"
dotenvy = "0.15.7"
dyn-clone = "1.0.16"
eframe = { version = "0.24.1", default-features = false, features = ["default_fonts", "glow"] }

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
